--- a/gametnen.html
+++ b/gametnen.html
@@ -1141,11 +1141,11 @@
         ">
                           <div class="dropdown-item selecionar-sala-v2" style="cursor: pointer; line-height: 25px" data-con="wss://fra-c.wormate.io:32053/wormy" data-room="2de" data-type="false">
                             <strong>
-                              02 &nbsp;𝐃𝑼𝐊𝐓𝐎𝐑
+                              02 &nbsp;𝙏 𝙉 𝙀 𝙉
                             </strong>
                           </div>
-                          <a href="https://www.tiktok.com/@duktor_up?lang=en" target="_blank">
-                            <img src="https://asserts.wormworld.io/rooms/TEM_TIKDUKTOR.png" style="width: 25px; vertical-align: middle">
+                          <a href="https://www.tiktok.com/@tnen.io1" target="_blank">
+                            <img src="https://timmapwormate.com/images/check/tnen.jpeg" style="width: 25px; vertical-align: middle">
                           </a>
                         </div>
                         
